fix dry run button white space and more rounded corners

--- a/apps/studio/src/assets/styles/app/_layout.scss
+++ b/apps/studio/src/assets/styles/app/_layout.scss
@@ -405,7 +405,8 @@ input[type="checkbox"] {
   display: inline-flex;
 	-webkit-appearance: none;
 	background-color: transparent;
-  box-shadow: inset 0 0 0 2px rgba($theme-base, 0.2);
+  outline: 2px solid rgba($theme-base, 0.2);
+  outline-offset: -2px;
   height: $checkbox-size;
   line-height: $checkbox-size;
   width: $checkbox-size;
@@ -422,6 +423,7 @@ input[type="checkbox"] {
     background: $theme-base;
     color: $theme-bg;
     box-shadow: none;
+    outline: none;
   }
   &:checked:after {
     font-family: 'Material Icons';
