--- a/apps/studio/src/assets/styles/app/query-editor.scss
+++ b/apps/studio/src/assets/styles/app/query-editor.scss
@@ -120,8 +120,13 @@
     }
   }
 
-  // Modal
-  // ------------------------------
+  .dry-run-btn {
+    gap: 0.35rem;
+
+    input[type=checkbox] {
+      margin: 0;
+    }
+  }
 }
 
 // Shortcut
